fixed spacing

--- a/src/components/Global.scss
+++ b/src/components/Global.scss
@@ -53,7 +53,7 @@ $text-color: white;
     @extend .title;
     margin: 10vw;
     margin-top: 14vw;
-    font-size: clamp(2rem, calc(1rem + 8vw), 3rem) !important;
+    font-size: clamp(2rem, calc(1rem + 8vw), 4rem) !important;
 
 
 }
