--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,3 +1,4 @@
+@import './../Global.scss';
 @import './Scroll.scss';
 
 $primary-color: rgb(16,30,50);
@@ -5,7 +6,7 @@ $primary-color: rgb(16,30,50);
 // parallax stuff
 .page3 {
     display: grid;
-    justify-content: center;
+    align-content: center;
     position: relative;
 
     grid-template-columns: 1fr 1fr;
@@ -34,7 +35,7 @@ $primary-color: rgb(16,30,50);
 
     margin-top: 11vh;
     margin-bottom: 11vh;
-    margin-left: 5vw;
+    margin-left: 16vw;
     width: fit-content;
     height: 500px;
 
@@ -50,6 +51,11 @@ $primary-color: rgb(16,30,50);
     text-align: center;
     margin-bottom: 1%;
 
+}
+
+.topSkill {
+    @extend .smallerTitle;
+    margin-top: 0px;
 }
 
 
